--- a/index.html
+++ b/index.html
@@ -11,6 +11,33 @@
 
 <body>
 
+  <main class="main-container">
+    <div class="calculator">
+      <div class="display">
+        <div class="result">0</div>
+      </div>
+      <div class="keypad">
+        <button class="key" id="number-button">1</button>
+        <button class="key" id="number-button">2</button>
+        <button class="key" id="number-button">3</button>
+        <button class="key" id="operator">+</button>
+        <button class="key" id="number-button">4</button>
+        <button class="key" id="number-button">5</button>
+        <button class="key" id="number-button">6</button>
+        <button class="key" id="subtract">-</button>
+        <button class="key" id="number-button">7</button>
+        <button class="key" id="number-button">8</button>
+        <button class="key" id="number-button">9</button>
+        <button class="key" id="multiply">*</button>
+        <button class="key" id="number-button">0</button>
+        <button class="key" id="float">.</button>
+        <button class="key" id="clear">C</button>
+        <button class="key" id="backslash">/</button>
+        <button class="key" id="equals">=</button>
+      </div>
+    </div>
+  </main>
+
 </body>
 
 </html>
